# Shiksha-Cast

./: .gitignore  DASHBOARD_GUIDE.md  KINNU_ART_WORKFLOW.md  KINNU_STYLE_PROMPT.md  LOCAL_OLLAMA_STUDIO.md  README_HOWTO.md  README_K02_STAR_BRIDGE.txt  SETUP.md  TROUBLESHOOTING.md  UPLOAD_METADATA.md  build-all-ai.bat  build-all.bat  build-k02-star-bridge-counting.bat  build-k02-talking.bat  build-k03-friction.bat  build-video.bat  free-gpu.bat  kinnu_character_studio.html  pyproject.toml  run-backend.bat  run-frontend.bat  setup.bat
config/: channel.yaml
content/: CONTENT_CREATION_GUIDE.md  README.md  SCRIPT_PROMPT_TEMPLATE.md
docs/: LOCAL_AI_VIDEO_PIPELINE.md  VROID_KINNU_GUIDE.md
kinnu_missing_picnic_basket_10_slide_pack/: README_KINNU_MISSING_PICNIC_BASKET.txt  build-k10-kinnu-missing-picnic-basket.bat
kinnu_today_2_videos_english_pack/: README_ENGLISH_PACK.txt  build-todays-2-kinnu-english-videos.bat
notebooks/: kinnu_backgrounds_kaggle.ipynb
scripts/: _ipadapter_smoke.py  _spike_optionc_young.py  _spike_story_assets.py  _spike_story_man.py  blender_animate.py  blender_episode.py  blender_inspect.py  blender_pose_render.py  build_talking_episode.py  check-local-ai-pipeline.ps1  comfyui-txt2img-smoke.py  export_decks.py  free_gpu.ps1  generate_pashu_palan_milk_purity_assets.py  inject_visual_prompts.py  kokoro_sample.py  kokoro_worker.py  lipsync_clip.py  make_3d_style_parts.py  make_buddy_hd_from_sheet.py  make_cartoon_backgrounds.py  make_cartoon_character.py  make_cartoon_props.py  make_cartoon_rig_placeholder.py  make_character_variant.py  make_count10_episode.py  make_english_board_slides.py  make_fuller_limbs.py  make_hd_variant.py  make_k02_talking_assets.py  make_k02_talking_video.py  make_k03_friction_10min_2d_episode.py  make_k03_friction_slides.py  make_k03_talking_backgrounds.py  make_kids_slides.py  make_kinnu_castmates.py  make_kinnu_english_compilation.py  make_kinnu_stills.py  make_learn10_episode.py  make_moti_hd.py  (+24 more)
tech-channel/: CLAUDE.md  make_video.py  render.sh
tests/: test_animate.py  test_assemble.py  test_asset_paths.py  test_cache.py  test_captions.py  test_cartoon_buddy.py  test_cartoon_castmates.py  test_cartoon_overlay.py  test_config.py  (+17 more)
(+894 files in other folders)
