[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shiksha-cast"
version = "0.1.0"
description = "Batch CLI to turn slide decks + narration scripts into captioned, narrated, YouTube-ready MP4s"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pypdfium2>=4.0",
    "pillow>=10.0",
    "rich>=13.0",
    "numpy>=1.24",
    "soundfile>=0.12",
]

[project.optional-dependencies]
tts = [
    "parler-tts>=0.2",
    "transformers>=4.40",
    "torch>=2.0",
    "soundfile>=0.12",
]
kokoro = [
    "kokoro>=0.8",
    "soundfile>=0.12",
    "torch>=2.0",
]
imagegen = [
    "diffusers>=0.28,<0.32",
    "transformers>=4.40",
    "torch>=2.0",
    "accelerate>=0.25",
]
parallax = [
    "depthflow>=0.8",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.6",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
shiksha-cast = "shiksha_cast.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/shiksha_cast"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
